--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-  <title>HTML Template</title>
+  <title>Gold Apple</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <style>
-    <![CDATA[
+    
     @font-face {
       font-family: 'GraphikLCG';
       src: url('https://test-email6786798.000webhostapp.com/fonts/GraphikLCG-Regular.ttf');
@@ -183,7 +183,27 @@
     .promo img {
       padding-top: 18px;
     }
-    ]]>
+    
+    .social td {
+      padding-right: 42px;
+    }
+
+    .apps td {
+      padding-left: 32px;
+    }
+    .info {
+      font-size: 10px;
+      line-height: 15px;
+      color: #ffffff;
+      text-decoration: none;
+    }
+
+    .phone a {
+      font-size: 14px;
+      line-height: 16px;
+      color: #ffffff;
+      text-decoration: none;
+    }
   </style>
 </head>
 
@@ -200,32 +220,32 @@
           </tr>
           <tr>
             <td bgcolor="#FFFFFF" class="header-td">
-              <table align="center" cellpadding="0" cellspacing="0" class="table-600" width="600">
+              <table align="center" cellpadding="0" cellspacing="0" class="table-580" width="580">
                 <tr>
                   <td align="left" class="menu">
                     <table>
                       <tr>
                         <td>
-                          <a href="#" style="font-family: Arial, Helvetica, sans-serif, GraphikLCG">новинки</a>
+                          <a href="#" style="font-family: Arial, Helvetica, sans-serif, 'GraphikLCG'">новинки</a>
                         </td>
                         <td>
-                          <a href="#" style="font-family: Arial, Helvetica, sans-serif, GraphikLCG">азия</a>
+                          <a href="#" style="font-family: Arial, Helvetica, sans-serif, 'GraphikLCG'">азия</a>
                         </td>
                         <td>
-                          <a href="#" style="font-family: Arial, Helvetica, sans-serif, GraphikLCG">уход</a>
+                          <a href="#" style="font-family: Arial, Helvetica, sans-serif, 'GraphikLCG'">уход</a>
                         </td>
                         <td>
-                          <a href="#" style="font-family: Arial, Helvetica, sans-serif, GraphikLCG">макияж</a>
+                          <a href="#" style="font-family: Arial, Helvetica, sans-serif, 'GraphikLCG'">макияж</a>
                         </td>
                         <td>
-                          <a href="#" style="font-family: Arial, Helvetica, sans-serif, GraphikLCG">парфюм</a>
+                          <a href="#" style="font-family: Arial, Helvetica, sans-serif, 'GraphikLCG'">парфюм</a>
                         </td>
                         <td>
-                          <a href="#" style="font-family: Arial, Helvetica, sans-serif, GraphikLCG">бренды</a>
+                          <a href="#" style="font-family: Arial, Helvetica, sans-serif, 'GraphikLCG'">бренды</a>
                         </td>
                         <td>
                           <a class="red" href="#"
-                            style="font-family: Arial, Helvetica, sans-serif, GraphikLCG">распрадажа</a>
+                            style="font-family: Arial, Helvetica, sans-serif, 'GraphikLCG'">распрадажа</a>
                         </td>
                       </tr>
                     </table>
@@ -437,40 +457,94 @@
                 </tr>
                 <tr>
                   <td class="description-5">
-                    <p align="center" style="font-family:Helvetica, Arial, sans-serif; padding-top: 18px;">* Код
+                    <p align="center" style="font-family:Helvetica, Arial, sans-serif; padding-top: 18px; padding-bottom: 20px;">* Код
                       действителен после применения скидки</p>
                   </td>
                 </tr>
               </table>
             </td>
           </tr>
+          <tr bgcolor="#ffffff" height="95">
+            <td></td>
+          </tr>
+          <tr bgcolor="#000000" height="50">
+            <td></td>
+          </tr>
           <tr bgcolor="#000000">
             <td>
-              <table align="center" cellpadding="0" cellspacing="0">
-                <tr width="400">
-                  <td>
-                    <a href="#"><img alt="f" src="https://test-email6786798.000webhostapp.com/img/icons/f.svg" /></a>
+              <table align="center" cellpadding="0" cellspacing="0" width="580">
+                <tr>
+                  <td align="left" class="social">
+                    <table>
+                      <tr>
+                        <td>
+                          <a href="#"><img alt="f" src="https://test-email6786798.000webhostapp.com/img/icons/f.svg" /></a>
+                        </td>
+                        <td>
+                          <a href="#"><img alt="ok" src="https://test-email6786798.000webhostapp.com/img/icons/ok.svg" /></a>
+                        </td>
+                        <td>
+                          <a href="#"><img alt="vk" src="https://test-email6786798.000webhostapp.com/img/icons/vk.svg" /></a>
+                        </td>
+                        <td>
+                          <a href="#"><img alt="insta" src="https://test-email6786798.000webhostapp.com/img/icons/insta.svg" /></a>
+                        </td>                  
+                      </tr>
+                    </table>
                   </td>
-                  <td>
-                    <a href="#"><img alt="ok" src="https://test-email6786798.000webhostapp.com/img/icons/ok.svg" /></a>
-                  </td>
-                  <td>
-                    <a href="#"><img alt="vk" src="https://test-email6786798.000webhostapp.com/img/icons/vk.svg" /></a>
-                  </td>
-                  <td>
-                    <a href="#"><img alt="insta"
-                        src="https://test-email6786798.000webhostapp.com/img/icons/insta.svg" /></a>
+                  <td align=right class="apps">
+                    <table>
+                      <tr>
+                        <td>
+                          <a href="#"><img alt="App-store" src="https://test-email6786798.000webhostapp.com/img/App-store.svg" /></a>
+                        </td>
+                        <td>
+                          <a href="#"><img alt="google-play"
+                              src="https://test-email6786798.000webhostapp.com/img/google-play.svg" /></a>
+                        </td>
+                      </tr>
+                    </table>
                   </td>
                 </tr>
-                <tr width="400">
-                  <td>
-                    <a href="#"><img alt="f" src="https://test-email6786798.000webhostapp.com/img/App-store.svg" /></a>
+                <tr>
+                  <td style="padding-top: 40px;">
+                    <table" cellpadding="0" cellspacing="0">
+                      <tr style="padding-bottom: 5px;">
+                        <td align="left">
+                          <table>
+                            <tr>
+                              <td class="phone"><a href="#" style="font-family: Arial, Helvetica, sans-serif, 'GraphikLCG'">+7 (495) 123-45-67</a></td>                              
+                            </tr>
+                          </table>
+                        </td>
+                        <td align="right">
+                          <table>
+                            <tr>                              
+                              <td><a class="info" href="#" style="font-family:Helvetica, Arial, sans-serif">Условия пользовательского соглашения</a></td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td align="left">
+                          <table>
+                            <tr>
+                              <td><p class="info" style="font-family:Helvetica, Arial, sans-serif">Служба поддержки</p>                              
+                            </tr>
+                          </table>
+                        </td>
+                        <td align="right">
+                          <table>
+                            <tr>                              
+                              <td><a class="info" href="#" style="font-family:Helvetica, Arial, sans-serif">Отписаться от рассылки</a></td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                      <tr bgcolor="#000000" height="48"></tr>
+                    </table>
                   </td>
-                  <td>
-                    <a href="#"><img alt="f"
-                        src="https://test-email6786798.000webhostapp.com/img/google-play.svg" /></a>
-                  </td>
-                </tr>
+                </tr>           
               </table>
             </td>
           </tr>
