--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     }
 
     .respons {
-      display: none;
+      /* display: none;       */
+      clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
     }
 
     .title-td {
@@ -187,9 +188,11 @@
       font-size: 11px;
     line-height: 16px;
     letter-spacing: 1.4px;    
-    vertical-align: bottom;    
-    display: table-cell;
+    /* vertical-align: bottom;     */
+    /* display: table-cell; */
     height: 40px;
+    display: block;
+    line-height: 54px;
     }
 
     .price {
@@ -254,7 +257,7 @@
         max-width: 620px !important;
       }
       
-      .table-580 {
+      .table-580, .table-320 {
         max-width: 550px !important;
       }
       .no_mobile {
@@ -330,7 +333,7 @@
       .table-800 {
         max-width: 400px !important;
       }      
-      .table-580 {
+      .table-580, .table-320 {
         max-width: 320px !important;
       }
       .block-td {
@@ -459,6 +462,8 @@
     .name {
     font-size: 10px !important;    
     padding-top: 11px !important;
+    line-height: 10px !important;
+    height: 6px !important;
     }
     .desc {
       display: none !important;
@@ -484,7 +489,7 @@
     }    
   }
     @media (max-width: 340px) {
-      .table-800 {
+      .table-800, .table-320 {
         max-width: 320px !important;
       }
       
@@ -798,7 +803,7 @@
           </tr>
           <tr>
             <td bgcolor="#ffffff">
-              <table class="table-580" bgcolor="#FFE9DA" align="center" cellpadding="0" cellspacing="0" width="580">
+              <table class="table-320" bgcolor="#FFE9DA" align="center" cellpadding="0" cellspacing="0" width="580">
                 <tr >
                   <td height="28"></td>
                 </tr>
@@ -823,12 +828,12 @@
                   <td height="14"></td>
                 </tr>
                 <tr>
-                  <td align="center" class="promo">
+                  <td align="center" class="promo">                    
                     <a href="#">
                       <img alt="promo" src="https://test-email6786798.000webhostapp.com/img/promo.png" />
                     </a>
                   </td>
-                </tr>
+                </tr>                
                 <tr>
                   <td height="18"></td>
                 </tr>
